chore(assets/sass): add new classes

--- a/src/assets/sass/modules/app.scss
+++ b/src/assets/sass/modules/app.scss
@@ -217,3 +217,13 @@
 .pt-2 {
   padding-top: 0.5rem;
 }
+
+@media (min-width: 768px) {
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  
+  .md\:gap-4 {
+    grid-gap: 1rem;
+  }
+}
